# Gemini-for-all

./: .env.example  .gitignore  LICENSE  README.md
Assembly (x86)/: Makefile  http_request.c  main.asm
BASIC/: main.bas
C/: Makefile  main.c
C#/: GeminiForAll.sln
C#/GeminiChatbot/: Program.cs
C++/: CMakeLists.txt  http_client.cpp  http_client.hpp  main.cpp
COBOL/: ask_gemini.sh  chatbot.cbl
Curl/: chat.sh  prompt.txt
Dart/: pubspec.yaml
Dart/lib/: main.dart
Fortran/: Makefile  main.f90
Go/: go.mod  main.go
Java/: pom.xml
Java/src/main/java/com/: GeminiChatBot.java
JavaScript/: index.js
Kotlin/: build.gradle.kts  settings.gradle.kts
Kotlin/src/main/kotlin/com/example/: GeminiChat.kt
LaTeX/: main.tex
Lua/: gemini.lua  main.lua  setup.txt
Objective-C/: GeminiChatManager.h  GeminiChatManager.m  main.m
Pascal/: dotenv.pas  main.pas
Python/: main.py  utils.py
Ruby/: chatbot.rb
Rust/: Cargo.toml
Rust/src/: main.rs
Shell-based/: chat.sh
TypeScript/src/: gemini.ts  index.ts
nextjs/src/app/: globals.css  layout.tsx  page.tsx
nextjs/src/app/api/chat/: route.ts
nextjs/src/components/: chat-bubble.tsx  chat-input.tsx  chat-window.tsx
nextjs/src/lib/: gemini.ts
